[package]
name = "fast_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
indicatif = "0.17.4"
reqwest = "0.11.18"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
